--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -1,7 +1,7 @@
 .title {
   margin-bottom: 15px;
 
-  color: #2196f3;
+  color: #64f321;
 
   text-align: center;
 }
@@ -27,7 +27,7 @@
 
   &:focus {
     outline: transparent;
-    border: 1px solid #2196f3;
+    border: 1px solid #21f33d;
   }
 
   @media screen and (min-width: 768px) {
