--- a/src/components/ContactItem/ContactItem.module.scss
+++ b/src/components/ContactItem/ContactItem.module.scss
@@ -48,7 +48,7 @@
 
   &:hover,
   &:focus {
-    color: #2196f3;
+    color: #f38021;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
